template.css:fix icon pic if too big, activity_curd.js,fix user can not change VER,SYS_PREFIX and SECRET_KEY

--- a/css/template.css
+++ b/css/template.css
@@ -751,4 +751,11 @@ border-collapse:collapse;
     filter: progid:DXImageTransform.Microsoft.Shadow(Strength = 10, Direction = 135, Color = '#cccccc');
 }
 
+
+.icon > a img {
+    height: 48px;
+    width: auto;
+     
+}
+
  
